# coinrandom

./: .gitattributes  .gitignore  CHANGELOG.ko.md  CHANGELOG.md  README.ko.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
coinrandom/: __init__.py  core.py  dex.py  functions.py  proof.py
coinrandom/chains/: btc.py  eth.py  sol.py
coinrandom/heavy/: __init__.py  engine.py  optimizer.py
coinrandom/light/: __init__.py  engine.py
coinrandom/standard/: __init__.py  engine.py
coinrandom/superheavy/: __init__.py  engine.py  optimizer.py
tests/: benchmark.py  run_tests.py  test_chains.py  test_core.py  test_failure_modes.py  test_optimizer.py  test_primitives.py
