[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coinrandom"
version = "2.0.1"
description = "True random numbers sourced from live cryptocurrency market data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "dglst", email = "woo9910203626@gmail.com" }]
keywords = [
    "random", "entropy", "cryptocurrency", "bitcoin", "randomness",
    "cryptography", "DRBG", "verifiable-random", "proof"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.32.4", "argon2-cffi>=21.0"]

[project.optional-dependencies]
heavy = ["numpy>=1.26", "scipy>=1.11"]
dev = ["build", "twine", "pytest"]

[project.urls]
Homepage = "https://github.com/LETUED/coinrandom"
Repository = "https://github.com/LETUED/coinrandom"
"Bug Tracker" = "https://github.com/LETUED/coinrandom/issues"
Changelog = "https://github.com/LETUED/coinrandom/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["coinrandom*"]
exclude = ["tests*"]
